--- a/app/src/main/res/layout/fragment_food_desrciption.xml
+++ b/app/src/main/res/layout/fragment_food_desrciption.xml
@@ -1,139 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp"
     tools:context=".FoodDescriptionFragment">
 
-
-
-    <androidx.cardview.widget.CardView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="8dp"
-        app:cardCornerRadius="6dp"
-        android:layout_centerInParent="true"
-        android:layout_margin="10dp"
-        android:id="@+id/cardviewdescription">
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp">
 
-        <RelativeLayout
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardviewdescription"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_margin="10dp"
+            app:cardCornerRadius="6dp"
+            app:cardElevation="8dp">
 
-            <ImageView
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="290dp"
-                android:id="@+id/fooddetailimage"
-                android:src="@drawable/ic_launcher_background"
-                android:layout_below="@id/fooddetailname"/>
+                android:layout_height="match_parent">
 
+                <ImageView
+                    android:id="@+id/fooddetailimage"
+                    android:layout_width="match_parent"
+                    android:layout_height="290dp"
+                    android:layout_below="@id/fooddetailname"
+                    android:src="@drawable/ic_launcher_background" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp"
-                android:layout_centerHorizontal="true"
-                android:text="Food name"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                android:id="@+id/fooddetailname"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="This is the description of the food"
-                android:layout_below="@id/fooddetailimage"
-                android:layout_margin="10dp"
-                android:id="@+id/fooddetaildetail"
-                android:layout_centerHorizontal="true"/>
-
-
-            <LinearLayout
-                android:id="@+id/linear"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@id/fooddetaildetail"
-                android:orientation="horizontal">
-
-                <Button
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:text="-"
-                    android:textColor="#081A75"
-                    android:background="@drawable/yellow_btn"
-                    android:id="@+id/downquantity"
-                    />
 
                 <TextView
+                    android:id="@+id/fooddetailname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="0"
-                    android:id="@+id/fooddetailquantity"
-                    android:textSize="18sp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="Food name"
                     android:textColor="@color/black"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"/>
+                    android:textSize="20sp" />
 
+                <TextView
+                    android:id="@+id/fooddetaildetail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/fooddetailimage"
+                    android:layout_centerHorizontal="true"
+                    android:layout_margin="10dp"
+                    android:text="This is the description of the food" />
+
+
+                <LinearLayout
+                    android:id="@+id/linear"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/fooddetaildetail"
+                    android:layout_centerHorizontal="true"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/downquantity"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/yellow_btn"
+                        android:text="-"
+                        android:textColor="#081A75" />
+
+                    <TextView
+                        android:id="@+id/fooddetailquantity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="15dp"
+                        android:text="0"
+                        android:textColor="@color/black"
+                        android:textSize="18sp" />
+
+
+                    <Button
+                        android:id="@+id/upquantity"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/yellow_btn"
+                        android:text="+"
+                        android:textColor="#081A75" />
+
+
+                </LinearLayout>
+
+
+                <TextView
+                    android:id="@+id/orderINFO"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/linear"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="0dp"
+                    android:text="$"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="italic" />
 
 
                 <Button
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:text="+"
-                    android:id="@+id/upquantity"
-                    android:textColor="#081A75"
-                    android:background="@drawable/yellow_btn"/>
+                    android:id="@+id/addtocartorderdetail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/orderINFO"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/yellow_btn"
+                    android:text="Add to Cart"
+                    android:textColor="#081A75" />
 
 
+            </RelativeLayout>
 
 
+        </androidx.cardview.widget.CardView>
 
-
-
-            </LinearLayout>
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@+id/linear"
-                android:id="@+id/orderINFO"
-                android:textStyle="italic"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:layout_marginTop="0dp"
-                android:text="$"/>
-
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Add to Cart"
-                android:textColor="#081A75"
-                android:layout_below="@id/orderINFO"
-                android:id="@+id/addtocartorderdetail"
-                android:background="@drawable/yellow_btn"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="20dp"/>
-
-
-        </RelativeLayout>
-
-
-
-
-
-
-    </androidx.cardview.widget.CardView>
-
-
-
+    </RelativeLayout>
 
 
 </RelativeLayout>
